syntax = "proto3";

option java_package = "net.torchz.gotrpc";
option objc_class_prefix = "GOTRPC";

package gotrpc;

// The otr service definition.
service OTRService {
  rpc NewConv (OtrConvRequest) returns (OtrConvResponse) {}
  rpc Receive (OtrMsgRequest) returns (OtrMsgResponse) {}
  rpc Send (OtrMsgRequest) returns (OtrMsgResponse) {}
}

// The otr Response message
message OtrMsgResponse {
  string plain = 1;
  string toSend = 2;
  string error = 3;
}

// The otr Request message
message OtrMsgRequest {
  string uuid = 1;
  string message = 2;
}

message OtrConvRequest {
  string uuid = 1;
}

message OtrConvResponse {
  string uuid = 1;
  string error = 2;
}
